--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
 
-<header>
-    <h1>SAPA Digital</h1>
+<header id="top">
+    <h1>SAPA WIYU</h1>
     <p>Sarana Pendampingan UMKM Digital Desa Wiyu</p>
 </header>
 
@@ -27,26 +27,26 @@
 <!-- HOME -->
 <section id="home">
     <div class="slider">
-        <img src="assets/img/slide1.jpg" class="slide active">
+        <img src="assets/img/slide1.jpeg" class="slide active">
         <img src="assets/img/slide2.jpg" class="slide">
-        <img src="assets/img/slide3.jpg" class="slide">
+        <img src="assets/img/slide3.jpeg" class="slide">
     </div>
 
-    <h2>Selamat Datang di SAPA Digital</h2>
+    <h2>Selamat Datang di SAPA WIYU</h2>
     <p>
-        SAPA Digital merupakan platform promosi UMKM Desa Wiyu yang bertujuan
+        SAPA WIYU merupakan platform promosi UMKM Desa Wiyu yang bertujuan
         mendukung pemberdayaan ekonomi masyarakat melalui pemanfaatan teknologi digital.
     </p>
 
     <div class="kkn-profile">
-        <img src="assets/img/kelompok.jpg" alt="Kelompok KKN Desa Wiyu">
+        <img src="assets/img/kelompok.jpeg" alt="Kelompok KKN Desa Wiyu">
 
         <div class="kkn-text">
             <h3>Kelompok KKN-BBK 7 Desa Wiyu 2025</h3>
             <p>
-                Kelompok KKN Desa Wiyu merupakan mahasiswa yang melaksanakan
+                Kelompok KKN Desa Wiyu merupakan mahasiswa Universitas Airlangga yang melaksanakan
                 program pengabdian masyarakat dengan fokus pada pemberdayaan
-                UMKM melalui digitalisasi, khususnya melalui program SAPA Digital
+                UMKM melalui digitalisasi, khususnya melalui program SAPA WIYU
                 sebagai media promosi dan pendampingan UMKM desa.
             </p>
         </div>
@@ -101,7 +101,70 @@
 </section>
 
 <footer>
-    <p>© 2025 SAPA Digital – Desa Wiyu</p>
+    <div class="footer-inner">
+        <div class="footer-left">
+            <div class="logo-column">
+                <img src="assets/img/logowiyu.png" alt="Logo Desa Wiyu" class="footer-logo">
+                <div class="footer-sponsor" aria-label="Sponsor">
+                    <img src="assets/img/logounair.png" alt="Universitas Airlangga" class="unair-logo">
+                    <div class="sponsor-text">
+                        <strong>Universitas Airlangga</strong>
+                        <span>KKN-BBK 7</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="footer-left-text">
+                <h4>Desa Wiyu</h4>
+                <address>
+                    Jln. Konsolidasi No. 103<br>
+                    Desa Wiyu, Kec. Pacet, Kab. Mojokerto 61374
+                </address>
+                <div class="contact-links">
+                    <a href="tel:+6281231187272" class="footer-link">📞 081231187272</a>
+                    <a href="mailto:desawiyu014@gmail.com" class="footer-link">✉️ desawiyu014@gmail.com</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer-right">
+            <h4>Ikuti Kami</h4>
+            <div class="socials" aria-label="Sosial media">
+                <a href="https://www.instagram.com/bbk7unair_wiyu" target="_blank" rel="noopener" aria-label="Instagram" class="social-link">
+                    <!-- Instagram SVG -->
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                        <rect x="3" y="3" width="18" height="18" rx="5" stroke="currentColor" stroke-width="1.5" fill="none"></rect>
+                        <circle cx="12" cy="12" r="3" stroke="currentColor" stroke-width="1.5" fill="none"></circle>
+                        <circle cx="17.5" cy="6.5" r="0.5" fill="currentColor"></circle>
+                    </svg>
+                </a>
+
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Facebook" class="social-link">
+                    <!-- Facebook SVG -->
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                        <path d="M22 12.07C22 6.48 17.52 2 11.93 2S2 6.48 2 12.07c0 4.99 3.66 9.13 8.44 9.93v-7.03H8.08v-2.9h2.36V9.4c0-2.33 1.39-3.62 3.52-3.62 1.02 0 2.09.18 2.09.18v2.3h-1.17c-1.15 0-1.51.72-1.51 1.45v1.75h2.57l-.41 2.9h-2.16v7.03C18.34 21.2 22 17.06 22 12.07z" fill="currentColor"/>
+                    </svg>
+                </a>
+
+                <a href="https://wa.me/6281234567890" target="_blank" rel="noopener" aria-label="WhatsApp" class="social-link">
+                    <!-- WhatsApp SVG -->
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                        <path d="M20.5 3.5C18.2 1.2 15 0 11.6 0 5.1 0 0 5.1 0 11.6c0 2 0.5 3.9 1.5 5.6L0 24l6.9-1.8c1.6 0.8 3.3 1.2 5.1 1.2 6.5 0 11.6-5.1 11.6-11.6 0-3.4-1.2-6.6-3.1-8.9z" fill="currentColor"/>
+                    </svg>
+                </a>
+            </div>
+
+            <h4 style="margin-top:16px">Kontak Cepat</h4>
+            <div class="quick-contact">
+                <a href="https://wa.me/6281231187272" target="_blank" rel="noopener" class="footer-link">Chat via WhatsApp</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer-bottom">
+        <p>© 2025 SAPA Wiyu – Desa Wiyu • Dibuat oleh KKN-BBK 7</p>
+        <a href="#top" class="back-to-top" aria-label="Kembali ke atas">⬆</a>
+    </div>
 </footer>
 
 <!-- JS -->
