update konten website

--- a/index.html
+++ b/index.html
@@ -61,20 +61,162 @@
         khususnya pada sektor UMKM yang dikelola oleh masyarakat setempat.
     </p>
 
+    <!-- DATA DEMOGRAFIS -->
+    <h3 class="subtitle-desa">Data Demografis Desa</h3>
+    <div class="data-grid">
+        <div class="data-card">
+            <div class="data-icon">👥</div>
+            <h4>Jumlah Penduduk</h4>
+            <p class="data-value">3,245 Orang</p>
+        </div>
+        <div class="data-card">
+            <div class="data-icon">🏠</div>
+            <h4>Jumlah Kepala Keluarga</h4>
+            <p class="data-value">892 KK</p>
+        </div>
+        <div class="data-card">
+            <div class="data-icon">📏</div>
+            <h4>Luas Wilayah</h4>
+            <p class="data-value">24.5 km²</p>
+        </div>
+        <div class="data-card">
+            <div class="data-icon">⛰️</div>
+            <h4>Ketinggian</h4>
+            <p class="data-value">450 mdpl</p>
+        </div>
+    </div>
+
+    <!-- POTENSI EKONOMI -->
+    <h3 class="subtitle-desa">Potensi Ekonomi</h3>
+    <div class="potency-grid">
+        <div class="potency-card">
+            <h4>🌾 Sektor Utama</h4>
+            <ul class="potency-list">
+                <li>Pertanian (padi, sayuran, buah-buahan)</li>
+                <li>Peternakan (ayam, ikan lele, sapi)</li>
+                <li>UMKM Kuliner & Kerajinan</li>
+            </ul>
+        </div>
+        <div class="potency-card">
+            <h4>📊 Statistik UMKM</h4>
+            <ul class="potency-list">
+                <li>Total UMKM: <strong>127 unit</strong></li>
+                <li>Sektor Kuliner: <strong>45 unit</strong></li>
+                <li>Sektor Kerajinan: <strong>38 unit</strong></li>
+                <li>Sektor Pertanian: <strong>44 unit</strong></li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- PETA LOKASI -->
+    <h3 class="subtitle-desa">Lokasi Desa Wiyu</h3>
     <iframe 
         src="https://www.google.com/maps?q=Desa%20Wiyu&output=embed"
-        width="100%" height="300" style="border:0;" allowfullscreen>
+        width="100%" height="300" style="border:0; border-radius: 16px;" allowfullscreen>
     </iframe>
+
 </section>
 
 <!-- UMKM -->
 <section id="umkm">
     <h2>Profil UMKM Desa Wiyu</h2>
-    <ul>
-        <li>UMKM Kuliner (makanan & minuman)</li>
-        <li>UMKM Kerajinan Tangan</li>
-        <li>UMKM Olahan Hasil Pertanian</li>
-    </ul>
+    <p>
+        Desa Wiyu memiliki berbagai UMKM yang berkembang di berbagai sektor. 
+        Program SAPA WIYU membantu memberdayakan dan memasarkan produk-produk lokal melalui platform digital.
+    </p>
+
+    <!-- KATEGORI UMKM -->
+    <h3 class="subtitle-umkm">Kategori UMKM</h3>
+    <div class="umkm-categories">
+        <div class="umkm-category-card">
+            <div class="category-icon">🍜</div>
+            <h4>UMKM Kuliner</h4>
+            <p class="category-stat">45 Unit</p>
+            <p class="category-desc">
+                Usaha di bidang makanan dan minuman yang meliputi kue kering, jajanan tradisional, 
+                snack, dan minuman lokal. Produk-produk ini dibuat dengan bahan berkualitas dan resep tradisional.
+            </p>
+            <ul class="category-examples">
+                <li>✓ Kue Kering & Pastry</li>
+                <li>✓ Keripik & Camilan</li>
+                <li>✓ Minuman Tradisional</li>
+            </ul>
+        </div>
+
+        <div class="umkm-category-card">
+            <div class="category-icon">🎨</div>
+            <h4>UMKM Kerajinan Tangan</h4>
+            <p class="category-stat">38 Unit</p>
+            <p class="category-desc">
+                Usaha kreatif dalam membuat kerajinan tangan berkualitas tinggi menggunakan 
+                bahan lokal dan teknik tradisional yang dipadukan dengan inovasi modern.
+            </p>
+            <ul class="category-examples">
+                <li>✓ Batik & Tekstil</li>
+                <li>✓ Keramik & Gerabah</li>
+                <li>✓ Anyaman & Kerajinan Lainnya</li>
+            </ul>
+        </div>
+
+        <div class="umkm-category-card">
+            <div class="category-icon">🌾</div>
+            <h4>UMKM Olahan Pertanian</h4>
+            <p class="category-stat">44 Unit</p>
+            <p class="category-desc">
+                Usaha pengolahan hasil pertanian lokal menjadi produk nilai tambah yang 
+                dapat bertahan lebih lama dan memiliki harga jual yang lebih tinggi.
+            </p>
+            <ul class="category-examples">
+                <li>✓ Madu & Produk Perlebahan</li>
+                <li>✓ Manisan & Pengawetan</li>
+                <li>✓ Pupuk & Bibit Organik</li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- GALLERY UMKM -->
+    <h3 class="subtitle-umkm">Galeri UMKM & Kegiatan</h3>
+    <p class="gallery-desc">
+        Dokumentasi aktivitas UMKM, workshop pelatihan, dan kegiatan pemberdayaan masyarakat di Desa Wiyu
+    </p>
+    <div class="umkm-gallery">
+        <div class="gallery-item">
+            <img src="assets/img/umkm1.jpg" alt="Workshop UMKM">
+            <div class="gallery-overlay">
+                <p>Workshop Pelatihan Digital Marketing</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <img src="assets/img/umkm2.jpg" alt="Produksi UMKM">
+            <div class="gallery-overlay">
+                <p>Proses Produksi Kerajinan Tangan</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <img src="assets/img/umkm3.jpg" alt="Pelatihan Packaging">
+            <div class="gallery-overlay">
+                <p>Pelatihan Desain Packaging</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <img src="assets/img/umkm4.jpg" alt="Produk Kuliner">
+            <div class="gallery-overlay">
+                <p>Hasil Produksi UMKM Kuliner</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <img src="assets/img/umkm5.jpg" alt="Bazar UMKM">
+            <div class="gallery-overlay">
+                <p>Event Bazar Produk Lokal</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <img src="assets/img/umkm6.jpg" alt="Pemberdayaan Masyarakat">
+            <div class="gallery-overlay">
+                <p>Program Pemberdayaan Masyarakat</p>
+            </div>
+        </div>
+    </div>
 </section>
 
 <!-- PRODUK -->
@@ -96,6 +238,22 @@
             <p>UMKM Sehat Alami</p>
             <p>Rp10.000</p>
             <a href="https://wa.me/6289876543210" target="_blank">Hubungi UMKM</a>
+        </div>
+
+        <div class="produk-card">
+            <img src="assets/img/produk3.jpeg">
+            <h3>Keripik Ubi</h3>
+            <p>UMKM Segar Selalu</p>
+            <p>Rp20.000</p>
+            <a href="https://wa.me/6281122334455" target="_blank">Hubungi UMKM</a>
+        </div>
+        
+        <div class="produk-card">
+            <img src="assets/img/produk4.jpg">
+            <h3>Kerupuk Ikan</h3>
+            <p>UMKM Aman Jaya</p>
+            <p>Rp25.000</p>
+            <a href="https://wa.me/6281122334455" target="_blank">Hubungi UMKM</a>
         </div>
     </div>
 </section>
