update website sapa wiyu

--- a/index.html
+++ b/index.html
@@ -67,22 +67,22 @@
         <div class="data-card">
             <div class="data-icon">👥</div>
             <h4>Jumlah Penduduk</h4>
-            <p class="data-value">3,245 Orang</p>
+            <p class="data-value">2,448 Orang</p>
         </div>
         <div class="data-card">
             <div class="data-icon">🏠</div>
             <h4>Jumlah Kepala Keluarga</h4>
-            <p class="data-value">892 KK</p>
+            <p class="data-value">957 KK</p>
         </div>
         <div class="data-card">
             <div class="data-icon">📏</div>
             <h4>Luas Wilayah</h4>
-            <p class="data-value">24.5 km²</p>
+            <p class="data-value">7.1 km²</p>
         </div>
         <div class="data-card">
             <div class="data-icon">⛰️</div>
             <h4>Ketinggian</h4>
-            <p class="data-value">450 mdpl</p>
+            <p class="data-value">420 mdpl</p>
         </div>
     </div>
 
@@ -93,17 +93,17 @@
             <h4>🌾 Sektor Utama</h4>
             <ul class="potency-list">
                 <li>Pertanian (padi, sayuran, buah-buahan)</li>
-                <li>Peternakan (ayam, ikan lele, sapi)</li>
+                <li>Peternakan (sapi, ayam, kambing)</li>
                 <li>UMKM Kuliner & Kerajinan</li>
             </ul>
         </div>
         <div class="potency-card">
             <h4>📊 Statistik UMKM</h4>
             <ul class="potency-list">
-                <li>Total UMKM: <strong>127 unit</strong></li>
-                <li>Sektor Kuliner: <strong>45 unit</strong></li>
-                <li>Sektor Kerajinan: <strong>38 unit</strong></li>
-                <li>Sektor Pertanian: <strong>44 unit</strong></li>
+                <li>Total UMKM: <strong>6 unit</strong></li>
+                <li>Sektor Kuliner: <strong>4 unit</strong></li>
+                <li>Sektor Kerajinan: <strong>1 unit</strong></li>
+                <li>Sektor Pertanian: <strong>1 unit</strong></li>
             </ul>
         </div>
     </div>
@@ -131,45 +131,42 @@
         <div class="umkm-category-card">
             <div class="category-icon">🍜</div>
             <h4>UMKM Kuliner</h4>
-            <p class="category-stat">45 Unit</p>
+            <p class="category-stat">4 Unit</p>
             <p class="category-desc">
-                Usaha di bidang makanan dan minuman yang meliputi kue kering, jajanan tradisional, 
-                snack, dan minuman lokal. Produk-produk ini dibuat dengan bahan berkualitas dan resep tradisional.
+                Usaha di bidang makanan dan minuman yang meliputi makanan berat, makanan ringan, jual beli tela, 
+                dan minuman jamu. Produk-produk ini dibuat dengan bahan berkualitas dan resep tradisional.
             </p>
             <ul class="category-examples">
-                <li>✓ Kue Kering & Pastry</li>
-                <li>✓ Keripik & Camilan</li>
-                <li>✓ Minuman Tradisional</li>
+                <li>✓ Nasi Kotak, Bakso, Seblak</li>
+                <li>✓ Minuman Jamu, Es Jeruk, dan Es Teh</li>
             </ul>
         </div>
 
         <div class="umkm-category-card">
             <div class="category-icon">🎨</div>
             <h4>UMKM Kerajinan Tangan</h4>
-            <p class="category-stat">38 Unit</p>
+            <p class="category-stat">1 Unit</p>
             <p class="category-desc">
                 Usaha kreatif dalam membuat kerajinan tangan berkualitas tinggi menggunakan 
                 bahan lokal dan teknik tradisional yang dipadukan dengan inovasi modern.
             </p>
             <ul class="category-examples">
-                <li>✓ Batik & Tekstil</li>
-                <li>✓ Keramik & Gerabah</li>
-                <li>✓ Anyaman & Kerajinan Lainnya</li>
+                <li>✓ Salon</li>
+                <li>✓ Rajutan</li>
             </ul>
         </div>
 
         <div class="umkm-category-card">
             <div class="category-icon">🌾</div>
             <h4>UMKM Olahan Pertanian</h4>
-            <p class="category-stat">44 Unit</p>
+            <p class="category-stat">1 Unit</p>
             <p class="category-desc">
                 Usaha pengolahan hasil pertanian lokal menjadi produk nilai tambah yang 
                 dapat bertahan lebih lama dan memiliki harga jual yang lebih tinggi.
             </p>
             <ul class="category-examples">
-                <li>✓ Madu & Produk Perlebahan</li>
-                <li>✓ Manisan & Pengawetan</li>
-                <li>✓ Pupuk & Bibit Organik</li>
+                <li>✓ Tela</li>
+                <li>✓ Perubian</li>
             </ul>
         </div>
     </div>
@@ -181,39 +178,39 @@
     </p>
     <div class="umkm-gallery">
         <div class="gallery-item">
-            <img src="assets/img/umkm1.jpg" alt="Workshop UMKM">
+            <img src="assets/img/umkm1.jpeg" alt="Catering">
             <div class="gallery-overlay">
-                <p>Workshop Pelatihan Digital Marketing</p>
+                <p>Catering</p>
             </div>
         </div>
         <div class="gallery-item">
-            <img src="assets/img/umkm2.jpg" alt="Produksi UMKM">
+            <img src="assets/img/umkm2.jpeg" alt="Es Jeruk & Es Teh">
             <div class="gallery-overlay">
-                <p>Proses Produksi Kerajinan Tangan</p>
+                <p>Es Jeruk & Es Teh</p>
             </div>
         </div>
         <div class="gallery-item">
-            <img src="assets/img/umkm3.jpg" alt="Pelatihan Packaging">
+            <img src="assets/img/umkm3.jpeg" alt="Cemilan Cireng, Basreng, dan Seblak">
             <div class="gallery-overlay">
-                <p>Pelatihan Desain Packaging</p>
+                <p>Cemilan Cireng, Basreng, dan Seblak</p>
             </div>
         </div>
         <div class="gallery-item">
-            <img src="assets/img/umkm4.jpg" alt="Produk Kuliner">
+            <img src="assets/img/umkm4.jpeg" alt="Minuman Jamu">
             <div class="gallery-overlay">
-                <p>Hasil Produksi UMKM Kuliner</p>
+                <p>Minuman Jamu</p>
             </div>
         </div>
         <div class="gallery-item">
-            <img src="assets/img/umkm5.jpg" alt="Bazar UMKM">
+            <img src="assets/img/umkm5.jpeg" alt="Salon">
             <div class="gallery-overlay">
-                <p>Event Bazar Produk Lokal</p>
+                <p>Salon</p>
             </div>
         </div>
         <div class="gallery-item">
-            <img src="assets/img/umkm6.jpg" alt="Pemberdayaan Masyarakat">
+            <img src="assets/img/umkm6.jpeg" alt="Bakso">
             <div class="gallery-overlay">
-                <p>Program Pemberdayaan Masyarakat</p>
+                <p>Bakso</p>
             </div>
         </div>
     </div>
@@ -225,35 +222,51 @@
 
     <div class="produk-container">
         <div class="produk-card">
-            <img src="assets/img/produk1.jpg">
-            <h3>Kue Kering</h3>
-            <p>UMKM Makmur Jaya</p>
-            <p>Rp15.000</p>
-            <a href="https://wa.me/6281234567890" target="_blank">Hubungi UMKM</a>
+            <img src="assets/img/produk1.jpeg">
+            <h3>Catering</h3>
+            <p>UMKM Bu Yuni</p>
+            <p>Dusun Tlebuk</p>
+            <a href="https://wa.me/6281231273694" target="_blank">Hubungi UMKM</a>
         </div>
 
         <div class="produk-card">
-            <img src="assets/img/produk2.jpg">
-            <h3>Keripik Singkong</h3>
-            <p>UMKM Sehat Alami</p>
-            <p>Rp10.000</p>
-            <a href="https://wa.me/6289876543210" target="_blank">Hubungi UMKM</a>
+            <img src="assets/img/produk2.jpeg">
+            <h3>Jual beli Tela</h3>
+            <p>UMKM Bu Nabilla</p>
+            <p>Dusun Tlebuk</p>
+            <a href="https://wa.me/6282251376190" target="_blank">Hubungi UMKM</a>
         </div>
 
         <div class="produk-card">
             <img src="assets/img/produk3.jpeg">
-            <h3>Keripik Ubi</h3>
-            <p>UMKM Segar Selalu</p>
-            <p>Rp20.000</p>
-            <a href="https://wa.me/6281122334455" target="_blank">Hubungi UMKM</a>
+            <h3>Bakso</h3>
+            <p>UMKM Bu Yuni</p>
+            <p>Dusun Tlebuk</p>
+            <a href="https://wa.me/6285941337614" target="_blank">Hubungi UMKM</a>
         </div>
         
         <div class="produk-card">
-            <img src="assets/img/produk4.jpg">
-            <h3>Kerupuk Ikan</h3>
-            <p>UMKM Aman Jaya</p>
-            <p>Rp25.000</p>
-            <a href="https://wa.me/6281122334455" target="_blank">Hubungi UMKM</a>
+            <img src="assets/img/produk4.jpeg">
+            <h3>Seblak</h3>
+            <p>UMKM Bu Isworo</p>
+            <p>Dusun Briti</p>
+            <a href="https://wa.me/6285748605508" target="_blank">Hubungi UMKM</a>
+        </div>
+
+        <div class="produk-card">
+            <img src="assets/img/produk5.jpeg">
+            <h3>Jamu</h3>
+            <p>UMKM Bu Weni</p>
+            <p>Dusun Tlebuk</p>
+            <a href="https://wa.me/6281393269840" target="_blank">Hubungi UMKM</a>
+        </div>
+
+        <div class="produk-card">
+            <img src="assets/img/produk6.jpeg">
+            <h3>Salon</h3>
+            <p>UMKM Bu Ninda</p>
+            <p>Dusun Wiyu</p>
+            <a href="https://wa.me/6282257451004" target="_blank">Hubungi UMKM</a>
         </div>
     </div>
 </section>
